# ifc-lite

./: Cargo.toml  package.json  pnpm-lock.yaml
.changeset/: collab-final-integration.md  collab-reach-for-the-stars.md  collab-tackle-everything.md  collab-v0.1-followups.md  collab-v0.1-foundation.md  collab-v0.3-v0.4-foundations.md  collab-v0.5-ops-and-v0.3-gc.md  collab-v0.5-v0.7-v1.0-prep.md  collab-v0.7-v1.0-resolver-units-perf.md  door-opening-handle-glazing.md  ids-xmldom-fallback.md  issue-243-arbitrary-section-planes.md  mcp-server.md  search-feedback-fixes.md  solar-device-via-inheritance.md  swept-disk-followups.md  swept-disk-trim-params.md  unified-filter-search.md
.github/workflows/: release.yml  test.yml
apps/desktop/: vite.config.ts
apps/server/: Cargo.toml
apps/viewer/: CHANGELOG.md  package.json  vite.config.ts
apps/viewer/public/samples/: building-architecture.ifc  hello-wall.ifc  infra-bridge.ifc
apps/viewer/src/: App.tsx  store.ts
apps/viewer/src/components/mcp/: HeroScene.tsx  McpLanding.tsx  McpPlayground.tsx  PlaygroundChat.tsx  PlaygroundViewer.tsx  README.md  data.ts  playground-dispatcher.ts  playground-files.ts  playground-uploads.ts  types.ts  use-mcp-page.ts
apps/viewer/src/components/viewer/: MainToolbar.tsx  SearchInline.tsx  SearchModal.filter.builder.tsx  SearchModal.filter.tsx  SearchModal.text.tsx  SearchModal.tsx  ViewerLayout.tsx  Viewport.tsx  ViewportContainer.tsx  mouseHandlerTypes.ts  selectionHandlers.ts  useAnimationLoop.ts  useMouseControls.ts  useRenderUpdates.ts
apps/viewer/src/components/viewer/tools/: SectionPanel.tsx  SectionVisualization.tsx
apps/viewer/src/hooks/: useDrawingGeneration.ts  useSearchIndex.ts  useViewerSelectors.ts
apps/viewer/src/lib/search/: common-ifc-types.ts  filter-evaluate.test.ts  filter-evaluate.ts  filter-rules.test.ts  filter-rules.ts  filter-schema.test.ts  filter-schema.ts  recent-searches.test.ts  recent-searches.ts  result-export.test.ts  result-export.ts  saved-filters.test.ts  saved-filters.ts  tier0-scan.test.ts  tier0-scan.ts  tier1-index.test.ts  tier1-index.ts
apps/viewer/src/store/: constants.ts  index.ts  types.ts
apps/viewer/src/store/slices/: searchSlice.test.ts  searchSlice.ts  sectionSlice.test.ts  sectionSlice.ts  selectionSlice.test.ts  selectionSlice.ts
docs/architecture/: collab-plan.md  geometry-pipeline.md
docs/guide/: collab-testing.md
examples/collab-demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/collab-demo/src/: main.ts
examples/collab-demo/stubs/: y-webrtc.js
examples/threejs-collab/: index.html  package.json  tsconfig.json  vite.config.ts
examples/threejs-collab/src/: main.ts
examples/threejs-collab/stubs/: y-webrtc.js
rust/core/src/: lib.rs  schema_helpers.rs
rust/geometry/: Cargo.toml
rust/geometry/src/: csg.rs  diagnostics.rs  lib.rs  manifold_kernel.rs  profiles.rs
rust/geometry/src/processors/: advanced.rs  advanced_face.rs  boolean.rs  mapped.rs  swept.rs  tests.rs
rust/geometry/src/router/: mod.rs  tests.rs  voids.rs
rust/geometry/tests/: bool_failure_test.rs  issue_582_583_regression_test.rs  issue_584_smiley_west_test.rs  issue_604_door_regression.rs  production_void_path_test.rs
rust/processing/: Cargo.toml
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/api/: gpu_meshes.rs  mod.rs  styling.rs
scripts/: collab-demo-3d.mjs  collab-demo.mjs  measure-bundle-size.sh
tests/models/: manifest.json
