[workspace]
members = ["rust/core", "rust/engine", "rust/geometry", "rust/processing", "rust/wasm-bindings", "apps/server", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "2.3.0"
edition = "2021"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/louistrue/ifc-lite"

[workspace.dependencies]
ifc-lite-core = { version = "2.3.0", path = "rust/core" }
ifc-lite-engine = { version = "2.1.7", path = "rust/engine" }
ifc-lite-geometry = { version = "2.3.0", path = "rust/geometry" }
ifc-lite-processing = { version = "2.1.7", path = "rust/processing" }
ifc-lite-wasm = { version = "2.3.0", path = "rust/wasm-bindings" }

[profile.release]
opt-level = 3           # Optimize for speed
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Strip symbols
panic = 'abort'         # Smaller panic handler
overflow-checks = false # Remove overflow checks in release

[profile.release.package."*"]
opt-level = 3
strip = true

