# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "ifc-lite-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance IFC processing server for Railway deployment"
keywords = ["ifc", "bim", "server", "aec", "api"]
categories = ["web-programming", "parsing"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "compression-gzip", "decompression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# IFC processing (workspace crates)
ifc-lite-core = { path = "../../rust/core" }
# NOTE: `default-features = false` skips the `manifold-csg` Cargo feature,
# which pulls in `manifold-csg-sys` (a C++ kernel that requires a working
# C++ cross-toolchain). The server binary only uses geometry types and
# runs the legacy BSP CSG path, so this keeps cross-compile targets
# (linux-arm64, linux-x64-musl) building without needing libstdc++ for
# every triple. See rust/geometry/Cargo.toml for the full feature contract.
ifc-lite-geometry = { path = "../../rust/geometry", default-features = false }
ifc-lite-processing = { path = "../../rust/processing" }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Streaming
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# Caching
cacache = "13"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Fast hashing (for style index) - must match ifc-lite-geometry version
rustc-hash = "1.1"

# CPU count
num_cpus = "1.16"

# Parquet/Arrow for efficient binary serialization
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
bytes = "1.5"

# Compression/decompression
flate2 = "1.0"

# Base64 encoding for SSE payloads
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "serialization"
harness = false
