[package]
name = "ifc-lite-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometry processing and mesh generation for IFC models"
keywords = ["ifc", "bim", "geometry", "mesh", "aec"]
categories = ["graphics", "parsing"]
readme = "../../README.md"

[features]
# Manifold is on by default for native consumers (server, desktop, CLI,
# tests). The WASM crate (`ifc-lite-wasm`) explicitly opts out via
# `default-features = false` because `manifold-csg-sys` cannot currently
# compile to `wasm32-unknown-unknown` (upstream `wasm-cxx-shim` is
# blocked on libc++ 18/20 incompatibilities — see
# `docs/architecture/geometry-pipeline.md` "WASM status"). Keeping
# Manifold on the native default ships the better CSG kernel to every
# build that *can* take it without regressing the slim WASM bundle.
default = ["manifold-csg"]
# Use the Manifold (https://github.com/elalish/manifold) C++ kernel for
# `subtract_mesh` / `union_mesh` / `intersection_mesh` instead of the
# legacy in-tree BSP port (`bsp_csg.rs`). Removes the 24-polygon operand
# cap and gives manifold-by-construction output.
#
# Native (Linux/macOS/Windows) only — see the note on `default` above.
manifold-csg = ["dep:manifold-csg"]
# Enable Manifold on `wasm32-unknown-unknown` (provisional support per
# upstream — no exception runtime, no threading, requires LLVM 20+).
# Implies `manifold-csg`.
manifold-csg-wasm-uu = ["manifold-csg", "manifold-csg/unstable-wasm-uu"]
debug_geometry = []

[dependencies]

# Triangulation
earcutr = "0.4"

# 2D polygon boolean operations for profile-level void subtraction
i_overlay = "1.9"

# Core IFC parsing
ifc-lite-core.workspace = true

# Math library
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Parallel processing
rayon = "1.10"

# Fast hashing
rustc-hash = "1.1"

# Small vector optimization for frequently allocated small collections
smallvec = "1.13"

# Error handling
thiserror = "1.0"

# Optional Manifold CSG kernel (T1.1). Off by default; see the
# `manifold-csg` feature above for the activation contract.
# `default-features = false` drops TBB-backed parallelism, which doesn't
# work on WASM anyway and isn't required for correctness on native.
manifold-csg = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
approx = "0.5"

[[example]]
name = "color_extraction_test"
path = "examples/color_extraction_test.rs"
