# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "ifc-lite-processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared IFC processing pipeline and types used by server and FFI"

[dependencies]
ifc-lite-core = { path = "../core" }
# `default-features = false` skips `manifold-csg` (C++ kernel) so this
# crate stays cross-compile friendly. Native consumers (server, desktop,
# CLI) re-enable Manifold via their own dependency on `ifc-lite-geometry`
# when they need it. See rust/geometry/Cargo.toml for the feature contract.
ifc-lite-geometry = { path = "../geometry", default-features = false }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1"
tracing = "0.1"
